# phd-research

./: .gitignore  AGENTS.md  README.md  candidatos_precisao_alta_confianca.csv  candidatos_precisao_media_confianca.csv  candidatos_revisao_ml.csv  comparacao_modelos.csv  modelo_precisao.joblib  pyproject.toml  scaler_precisao.joblib  scaler_recall.joblib
data/: ablation_comprec_macd.csv  ablation_comprec_macd_summary.csv  ablation_comprec_nomacd.csv  ablation_comprec_nomacd_summary.csv  ablation_results.csv  cv_5fold_results.csv  epidemiological_impact.csv  epidemiological_summary.json  exp2_dossiers_dryrun_vigilancia.json  exp2_llm_batch_vigilancia.json  feature_importance_global.csv  feature_importance_per_band.csv  imbalance_sensitivity.csv  kfold_cv_results.csv  nb01_comparacao_modelos.csv  nb01_results.json  nb02_comparacao_modelos.csv  nb02_results.json  nb02_threshold_analysis.csv  nb03_comparacao_modelos.csv  nb03_results.json  pareto_grid.csv  poc_llm_3model_results.json  resultados_faixas_score.csv  shap_importance.csv  sprint3a_e2e_results.json
docs/: RESUMO-NOTEBOOKS.md  RESUMOPASSOSANALISE.odt  SINTese-RESULTADOS.md
figures/: feature_importance_heatmap.pgf  imbalance_sensitivity.pgf  shap_summary.pgf
gzcmd/: __init__.py  bands.py  calibration.py  classifier.py  cli.py  config.py  drift_monitor.py  eval.py  guardrails.py  gzcmd_v3_config.yaml  gzcmd_v3_llm_output.schema.json  gzcmd_v3_llm_prompt.md  gzcmd_v3_policy_engine.py  llm_dossier.py  llm_review.py  loader.py  metrics.py  policy_engine.py  reporting.py  runner.py  runner_api.py  splitting.py
(+565 files in other folders)
